--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,13 +33,84 @@ body {
 	height: 150px;
 }
 
+.hat {
+	
+	background-color: black;
+	width: 80px;
+	height: 70px;
+	border-top-left-radius: 15%;
+	border-top-right-radius: 15%;
+	position: absolute;
+	top: -65px;
+	left: 35px;
+}
+
+.rim {
+	
+    background-color: black;
+    width: 120px;
+    height: 30px;
+    border-radius: 50%;
+    position: absolute;
+    top: 60px;
+    left: -20px;
+}
+
+
+
+.face {
+	margin: 40px auto;
+	height: 30px;
+	position: relative;
+	width: 50%;
+}
+
+.leye, .reye, .nose, .mouth {
+	border: thin black solid;
+	width: 20px;
+	background-color: black;
+	border-radius: 45%;
+		
+}
+
+.leye {
+	float: left;
+	height: 15px;
+}
+
+.reye {
+	float: right;
+	height: 15px;
+}
+
+.nose, .mouth {
+	
+	clear: both;
+	margin: auto;
+}
+
+.nose {
+	margin-top: -60px;
+	height: 10px;
+}
+
+.mouth {
+	
+	margin-top: 35px;
+	width: 60px;
+	height: 5px;
+	border-bottom-left-radius: 510% 1250%;
+	border-bottom-right-radius: 510% 1250%;
+}
+
+
 .smBody {
 	
 	position: relative;
 	bottom: -30px;
 	z-index: 9;
 	width: 75%;
-	height: 170px
+	height: 170px;
 	
 }
 
@@ -49,6 +120,9 @@ body {
 	bottom: 5px;
 	z-index: 8;
 	width: 90%;
-	height: 200px;
+	height: 200px; 
 }
+
+
+
 
